metube/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: metube
  namespace: metube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metube
  template:
    metadata:
      labels:
        app: metube
    spec:
      dnsConfig:
        nameservers:
        - 192.168.1.8
      dnsPolicy: None
      containers:
      - name: metube
        image: ghcr.io/alexta69/metube:2024-01-05
        imagePullPolicy: IfNotPresent
        ports:
        - name: metube
          containerPort: 8081
        volumeMounts:
        - name: cookies
          mountPath: /cookies
        - name: critical-tv
          mountPath: /downloads/critical-tv
        - name: youtube
          mountPath: /downloads/youtube
        resources:
          limits:
            memory: 700Mi
          requests:
            memory: 350Mi
        readinessProbe:
          tcpSocket:
            port: metube
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: metube
          initialDelaySeconds: 15
          periodSeconds: 20
      volumes:
      - name: cookies
        secret:
          secretName: cookies
      - name: critical-tv
        nfs:
          path: /volume1/critical/media/tv
          server: nas01.crt.house
      - name: youtube
        nfs:
          path: /volume1/media/youtube
          server: nas01.crt.house
