metube/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metube
  namespace: metube
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: metube
  selector:
    app: metube
